--- a/Styles.css
+++ b/Styles.css
@@ -157,6 +157,51 @@ html,body
     .open-menu, .close-menu{display:block;}
     #check:checked ~ .navbar__menu {right: 0;}
 }
+.button{
+    padding: 1rem 2rem;
+    border: none;
+    background: var(--green);
+    color: var(--white);
+    font-size: 2rem;
+    cursor: pointer;
+    outline: none;
+    transition: 0.3s ease;
+    text-decoration: none;
+    border-radius: 4px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.button:hover{
+    background: var(--black);
+}
+
+/* Hero section */
+.hero{
+    background: linear-gradient(to right, rgba(50,205,50, 0.5), rgba(0,0,0, 0.0)),
+    url('./images/Snappy Renders Logo.png');
+    height: 100vh;
+    width: 100vw;
+    background-position: center;
+    background-size: cover;
+    padding: 0.5rem calc((100vw - 1200px) / 2);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.hero__content{
+    color: var(--white);
+    padding: 2rem 0.5rem;
+    line-height: 1;
+}
+.hero__content h1{
+    font-size: clamp(3rem, 8vw, 7rem);
+    text-transform: uppercase;
+    margin-bottom: 0.5rem; 
+}
+.hero__content p{
+    font-size: clamp(1rem, 4vw, 2.5rem);
+    margin-bottom: 3rem; 
+}
 
 /* footer section*/
 .Dtech__tag{
