--- a/Styles.css
+++ b/Styles.css
@@ -202,6 +202,20 @@ html,body
     font-size: clamp(1rem, 4vw, 2.5rem);
     margin-bottom: 3rem; 
 }
+@media screen and (max-width: 768px){
+.hero{
+    background: linear-gradient(to right, rgba(50,205,50, 0.5), rgba(0,0,0, 0.0)),
+    url('./images/Snappy Renders Logo.png');
+    height: 80vh;
+    background-position: center;
+    background-size: cover;
+    padding: 0.5rem calc((100vw - 1200px) / 2);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    scroll-snap-align: start;
+}
+}
 
 /* footer section*/
 .Dtech__tag{
