--- a/Styles.css
+++ b/Styles.css
@@ -206,7 +206,7 @@ html,body
 .hero{
     background: linear-gradient(to right, rgba(50,205,50, 0.5), rgba(0,0,0, 0.0)),
     url('./images/Snappy Renders Logo.png');
-    height: 80vh;
+    width: 100vw;
     background-position: center;
     background-size: cover;
     padding: 0.5rem calc((100vw - 1200px) / 2);
