--- a/Styles.css
+++ b/Styles.css
@@ -207,8 +207,10 @@ html,body
         background: linear-gradient(to right, rgba(50,205,50, 0.5), rgba(0,0,0, 0.0)),
         url('./images/Snappy Renders Logo.png');
         width: 100vw;
+        hegiht: 100%;
         background-position: center;
         background-size: contain;
+        background-repeat: no-repeat;
         padding: 0.5rem calc((100vw - 1200px) / 2);
         display: flex;
         justify-content: flex-start;
