--- a/Styles.css
+++ b/Styles.css
@@ -206,8 +206,8 @@ html,body
     .hero{
         background: linear-gradient(to right, rgba(50,205,50, 0.5), rgba(0,0,0, 0.0)),
         url('./images/Snappy Renders Logo.png');
-        width: 100vw;
-        hegiht: 50vh;
+        width: 100%;
+        hegiht: 50%;
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
