--- a/Styles.css
+++ b/Styles.css
@@ -233,7 +233,6 @@ html,body
     padding: 0.5rem calc((100vw - 1200px) / 2);
 }
 .services__content{
-    color: var(--green);
     padding: 2rem 0.5rem;
     line-height: 1;
 }
@@ -242,12 +241,14 @@ html,body
     text-transform: uppercase;
     margin-bottom: 1rem;
     margin-top: 1rem;
+    color: var(--green);
 }
 .services__content p{
-    color: var(--green);
-    font-size: clamp(2rem, 8vw, 4rem);
+    color: var(--black);
+    font-size: clamp(3rem, 8vw, 5rem);
     margin-bottom: 0.5rem;
     margin-top: 0.5rem;
+    margin-left: 1rem;
 }
 
 /* footer section*/
