--- a/Styles.css
+++ b/Styles.css
@@ -245,10 +245,11 @@ html,body
 }
 .services__content p{
     color: var(--black);
-    font-size: clamp(3rem, 8vw, 5rem);
+    font-size: clamp(2rem, 8vw, 5rem);
     margin-bottom: 0.5rem;
     margin-top: 0.5rem;
     margin-left: 1rem;
+    text-transform: uppercase;
 }
 
 /* footer section*/
