--- a/Styles.css
+++ b/Styles.css
@@ -235,6 +235,7 @@ html,body
 }
 .snappy__content{
     margin-bottom: 2rem;
+    margin-top: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
