--- a/Styles.css
+++ b/Styles.css
@@ -180,8 +180,7 @@ html,body
 
 /* Hero section */
 .hero{
-    background: linear-gradient(to right, rgba(50,205,50, 0.5), rgba(0,0,0, 0.0)),
-    url('./images/Snappy Renders Logo.png');
+    background: linear-gradient(to right, rgba(50,205,50, 0.5), rgba(0,0,0, 0.0));
     height: 100vh;
     width: 100vw;
     background-position: center;
@@ -191,10 +190,19 @@ html,body
     justify-content: flex-start;
     align-items: center;
 }
+.hero__img{
+    background: var(--white), url('./images/Snappy Renders Logo.png');
+    height: 30vh;
+    width: 70vw;
+    background-position: center;
+    background-size: cover;
+    padding: 0.5rem calc((100vw - 1200px) / 2);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
 .hero__content{
-    color: var(--white);
-    padding: 2rem 0.5rem;
-    line-height: 1;
+    
 }
 .hero__content h1{
     font-size: clamp(3rem, 8vw, 7rem);
