--- a/Styles.css
+++ b/Styles.css
@@ -180,7 +180,7 @@ html,body
 
 /* Hero section */
 .hero{
-    background: linear-gradient(to right, rgba(50,205,50, 0.5), rgba(0,0,0, 0.0));
+    background: rgba(50,205,50, 0.5);
     height: 100vh;
     width: 100vw;
     background-position: center;
@@ -195,7 +195,6 @@ html,body
     height: 30vh;
     width: 70vw;
     background-position: center;
-    background-size: cover;
     padding: 0.5rem calc((100vw - 1200px) / 2);
     display: flex;
     justify-content: flex-start;
