--- a/Styles.css
+++ b/Styles.css
@@ -195,6 +195,7 @@ html,body
     height: 30vh;
     width: 70vw;
     background-position: center;
+    background-size: cover;
     padding: 0.5rem calc((100vw - 1200px) / 2);
     display: flex;
     justify-content: flex-start;
