--- a/Styles.css
+++ b/Styles.css
@@ -2,6 +2,7 @@
     --black:#000000;
     --white:#fff;
     --green:#32CD32;
+    --yellow:#FDDA0D;
 }
 *{
     box-sizing: border-box;
@@ -191,32 +192,17 @@ html,body
     align-items: center;
 }
 .hero__img{
-    background: var(--white), url('./images/Snappy Renders Logo.png');
-    height: 30vh;
-    width: 70vw;
-    background-position: center;
-    background-size: cover;
-    padding: 0.5rem calc((100vw - 1200px) / 2);
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    width: 80vw;
+    padding: 5rem;
 }
 .hero__content{
-    
-}
-.hero__content h1{
-    font-size: clamp(3rem, 8vw, 7rem);
-    text-transform: uppercase;
-    margin-bottom: 0.5rem; 
-}
-.hero__content p{
-    font-size: clamp(1rem, 4vw, 2.5rem);
-    margin-bottom: 3rem; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 @media screen and (max-width: 800px){
     .hero{
-        background: linear-gradient(to right, rgba(50,205,50, 0.5), rgba(0,0,0, 0.0)),
-        url('./images/Snappy Renders Logo.png');
+       background: rgba(50,205,50, 0.5);
         width: 100%;
         hegiht: 50%;
         background-position: center;
@@ -233,7 +219,7 @@ html,body
 /* services section*/
 .Snappy{
     width: 100%;
-    background: linear-gradient(to right, rgba(50,205,50, 0.5), rgba(0,0,0, 0.0));
+    background: rgba(50,205,50, 0.5)
     display: flex;
     justify-content: center;
     align-items: center;
@@ -249,7 +235,7 @@ html,body
     align-items: center;
 }
 .services{
-    background: linear-gradient(to right, rgba(50,205,50, 0.4), rgba(0,0,0, 0.0));
+    background: rgba(50,205,50, 0.5);
     width: 100%;
     hegiht: 100%;
     display: flex;
@@ -270,11 +256,19 @@ html,body
     text-transform: uppercase;
     margin-bottom: 3rem;
     margin-top: 1rem;
-    color: var(--green);
+    color: var(--white);
+}
+.services__content h2{
+    font-size: clamp(2rem, 8vw, 3rem);
+    text-transform: uppercase;
+    margin-bottom: 3rem;
+    margin-top: 1rem;
+    color: var(--white);
+    margin-left: calc(100vw - 1200px) / 2);
 }
 .services__content p{
-    color: var(--black);
-    font-size: clamp(1rem, 8vw, 2rem);
+    color: var(--yellow);
+    font-size: clamp(2rem, 8vw, 3rem);
     margin-bottom: 3rem;
     margin-top: 1rem;
     text-transform: uppercase;
