--- a/Styles.css
+++ b/Styles.css
@@ -185,7 +185,7 @@ html,body
     height: 100vh;
     width: 100vw;
     background-position: center;
-    background-size: cover;
+    background-size: auto;
     padding: 0.5rem calc((100vw - 1200px) / 2);
     display: flex;
     justify-content: flex-start;
@@ -206,7 +206,7 @@ html,body
     height: 50vh;
     width: 100vw;
     background-position: center;
-    background-size: cover;
+    background-size: auto;
     padding: 0.5rem calc((100vw - 1200px) / 2);
     display: flex;
     justify-content: flex-start;
