--- a/Styles.css
+++ b/Styles.css
@@ -253,25 +253,24 @@ html,body
     font-size: clamp(2rem, 8vw, 3rem);
     text-transform: uppercase;
     margin-bottom: 3rem;
-    display: flex;
     margin-top: 1rem;
+    display:flex;
     color: var(--white);
 }
 .services__content h2{
     font-size: clamp(2rem, 8vw, 3rem);
     text-transform: uppercase;
     margin-bottom: 3rem;
-    display: flex;
     margin-top: 1rem;
+    display:flex;
     color: var(--white);
-    margin-left: 30vw;
+    margin-left: 1rem;
 }
 .services__content p{
     color: var(--yellow);
     font-size: clamp(2rem, 8vw, 3rem);
     margin-bottom: 3rem;
     margin-top: 1rem;
-    display: flex;
     text-transform: uppercase;
     font-weight: bold;
 }
