--- a/Styles.css
+++ b/Styles.css
@@ -262,7 +262,8 @@ html,body
     margin-bottom: 3rem;
     margin-top: 1rem;
     color: var(--white);
-    margin-left: 1rem;
+    align-items:right;
+    justify-content:right;
 }
 .services__content b{
     color: var(--yellow);
