--- a/Styles.css
+++ b/Styles.css
@@ -182,16 +182,16 @@ html,body
 /* Hero section */
 .hero{
     background: rgba(50,205,50, 0.5);
-    height: 100vh;
-    width: 100vw;
-    background-position: center;
-    background-size: auto;
-    padding: 0.5rem calc((100vw - 1200px) / 2);
-    display: flex;
-    justify-content: flex-start;
+    width: 100%;
+    hegiht: 100%;
     align-items: center;
+    scroll-snap-align: start;
+    background-position: center;
+    background-size: cover;
+    padding: 0.5rem calc((100vw - 1200px) / 2);
 }
 .hero__img{
+    line-height: 1;
     width: 80vw;
     height: 80vw;
     padding: 5rem;
@@ -199,14 +199,13 @@ html,body
 @media screen and (max-width: 800px){
     .hero{
     background: rgba(50,205,50, 0.5);
-    height: 50vh;
-    width: 100vw;
-    background-position: center;
-    background-size: auto;
-    padding: 0.5rem calc((100vw - 1200px) / 2);
-    display: flex;
-    justify-content: flex-start;
+    width: 100%;
+    hegiht: 100%;
     align-items: center;
+    scroll-snap-align: start;
+    background-position: center;
+    background-size: cover;
+    padding: 0.5rem calc((100vw - 1200px) / 2);
     }
 }
 
