--- a/Styles.css
+++ b/Styles.css
@@ -200,7 +200,7 @@ html,body
 }
 @media screen and (max-width: 800px){
     .Hero{
-        background: rgba(34, 139, 34, 0.9);
+        background:  linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(34, 139, 34, 0.9));
         width: 100%;
         hegiht: 80%;
         align-items: center;
