--- a/Styles.css
+++ b/Styles.css
@@ -212,7 +212,7 @@ html,body
     justify-content: center;
 }
 .Render__Container img{
-    width: 100%;
+    width: 50vw;
     height: 100%;
     padding: 3rem;
 }
@@ -229,6 +229,11 @@ html,body
     .Hero__Container img{
         width: 80vw;
         height: 80vw;
+        padding: 3rem;
+    }
+    .Render__Container img{
+        width: 100%;
+        height: 100%;
         padding: 3rem;
     }
 }
