--- a/Styles.css
+++ b/Styles.css
@@ -241,7 +241,7 @@ html,body
 /* services section*/
 .Snappy{
     width: 100%;
-    background: rgba(34, 139, 34, 0.9);
+    background: rgba(2, 48, 32, 0.9);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -311,7 +311,80 @@ html,body
     text-transform: uppercase;
     font-weight: bold;
 }
+/* Contact page */
+.email{
+    background: linear-gradient(to right, rgba(2, 48, 32, 0.9), rgba(0,0,0, 0.2)),
+    url('./images/snappyRendersHero.png');
+    height: 120vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 0.5rem calc((100vw - 1200px) / 2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    scroll-snap-align: start;
+}
+.email__content{
+    animation-duration: 1.5s;
+    animation-name: Slide;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.email__content h1{
+    text-align: center;
+    margin-bottom: 1rem;
+    font-size: clamp(1rem, 5vw, 3rem);
+    padding: 0 1rem;
+    color: var(--white)
+}
+.email__content p{
+    text-align: center;
+    font-size:clamp(1rem, 2.5vw, 1.5rem);
+    padding: 0 1rem;
+    margin-bottom: 2rem;
+    color: var(--white);
+}
+form{
+    z-index: 10;
+}
+.form__wrap input{
+    padding: 1rem 1.5rem;
+    outline: none;
+    width: 350px;
+    height: 50px;
+    border: none;
+    margin-right: 1rem;
+    border-radius: 4px;
+}
+span{
+    color: var(--white);
+    margin-top: 10px;
+    display: block;
+}
+@media screen and (max-width: 2000px){
+    .form__wrap{
+        display: flex;
+        flex-direction: column;
+        padding: 0 1rem;
+    }
+    .form__wrap input{
+        margin-bottom: 1rem;
+        width: 100%;
+        margin-right: 0;
+    }
 
+    button{
+        width: 100%;
+        min-width: 350px;
+    }
+}
+@media screen and (max-width: 400px){
+    button{
+        width: 100%;
+        min-width: 250px;
+    }
+}
 /* footer section*/
 .Dtech__tag{
     width: 50%;
