--- a/Styles.css
+++ b/Styles.css
@@ -199,7 +199,7 @@ html,body
     padding: 3rem;
 }
 .Render{
-    background: rgba(34, 139, 34, 0.9);
+    background: linear-gradient(to right, rgba(2, 48, 32, 0.9), rgba(0,0,0, 0.2));
     width: 100%;
     hegiht: 80%;
     align-items: center;
