--- a/Styles.css
+++ b/Styles.css
@@ -182,8 +182,8 @@ html,body
 /* Hero section */
 .Hero{
     background: linear-gradient(to bottom, rgba(2, 48, 32, 0.9), rgba(34, 139, 34, 0.9));
-    width: 100%;
-    hegiht: 60%;
+    width: 100vw;
+    hegiht: 40vh;
     align-items: center;
     scroll-snap-align: start;
     background-position: center;
@@ -197,7 +197,7 @@ html,body
 .Hero__Container img{
     width: 40vw;
     height: 40vw;
-    padding: 3rem;
+    padding: 1rem;
 }
 .Render{
     background: linear-gradient(to right, rgba(2, 48, 32, 0.9), rgba(0,0,0, 0.2));
@@ -221,8 +221,8 @@ html,body
 @media screen and (max-width: 800px){
     .Hero{
         background: linear-gradient(to bottom, rgba(2, 48, 32, 0.9), rgba(34, 139, 34, 0.9));
-        width: 100%;
-        hegiht: 60%;
+        width: 100vw;
+        hegiht: 60vh;
         align-items: center;
         scroll-snap-align: start;
         background-position: center;
@@ -231,7 +231,7 @@ html,body
     .Hero__Container img{
         width: 80vw;
         height: 80vw;
-        padding: 3rem;
+        padding: 1rem;
     }
     .Render__Container img{
         width: 100%;
