--- a/Styles.css
+++ b/Styles.css
@@ -177,6 +177,8 @@ html,body
 }
 .button:hover{
     background: var(--black);
+    font-size: 2.5rem;
+    padding: 1.5rem 2.5rem;
 }
 
 /* Hero section */
