--- a/Styles.css
+++ b/Styles.css
@@ -307,6 +307,18 @@ html,body
     margin-top: 1rem;
     color: var(--white);
 }
+.services__content1 h1:hover{
+    font-size: clamp(2.5rem, 8vw, 3.5rem);
+    .services__content1 b, .services__content2 b{
+        font-size: clamp(2.5rem, 8vw, 3.5rem);
+    }
+}
+.services__content2 h2:hover{
+    font-size: clamp(2.5rem, 8vw, 3.5rem);
+    .services__content1 b, .services__content2 b{
+        font-size: clamp(2.5rem, 8vw, 3.5rem);
+    }
+}
 .services__content1 b, .services__content2 b{
     color: var(--yellow);
     font-size: clamp(2rem, 8vw, 3rem);
