--- a/Styles.css
+++ b/Styles.css
@@ -313,12 +313,12 @@ html,body
     color: var(--white);
 }
 .services__content1 h1:hover{
-    .services__content1 b, .services__content2 b{
+    .services__content1 b{
         font-size: clamp(2.5rem, 8vw, 3.5rem);
     }
 }
 .services__content2 h2:hover{
-    .services__content1 b, .services__content2 b{
+    .services__content2 b{
         font-size: clamp(2.5rem, 8vw, 3.5rem);
     }
 }
