--- a/Styles.css
+++ b/Styles.css
@@ -200,10 +200,11 @@ html,body
     width: 30vw;
     height: 30vw;
     padding: 1rem;
+    transition: 0.4s ease;
 }
 .Hero__Container img:hover{
-    width: 40vw;
-    height: 40vw;
+    width: 35vw;
+    height: 35vw;
     padding: 1rem;
 }
 .Render{
@@ -313,10 +314,10 @@ html,body
     color: var(--white);
 }
     .services__content1 b:hover{
-        font-size: clamp(2.5rem, 8vw, 3.5rem);
+        font-size: clamp(3rem, 8vw, 4rem);
     }
     .services__content2 b:hover{
-        font-size: clamp(2.5rem, 8vw, 3.5rem);
+        font-size: clamp(3rem, 8vw, 4rem);
     }
 .services__content1 b, .services__content2 b{
     color: var(--yellow);
@@ -325,6 +326,7 @@ html,body
     margin-top: 1rem;
     text-transform: uppercase;
     font-weight: bold;
+    transition: 0.4s ease;
 }
 /* Contact page */
 .email{
