--- a/Styles.css
+++ b/Styles.css
@@ -515,22 +515,22 @@ input [type=text], select{
     margin-bottom: 1rem;
     color: var(--black);
 }
-.custom-shape-divider-top-1711032884 {
+.custom-shape-divider-bottom-1711033628 {
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
     width: 100%;
     overflow: hidden;
     line-height: 0;
 }
 
-.custom-shape-divider-top-1711032884 svg {
+.custom-shape-divider-bottom-1711033628 svg {
     position: relative;
     display: block;
     width: calc(100% + 1.3px);
     height: 62px;
 }
 
-.custom-shape-divider-top-1711032884 .shape-fill {
+.custom-shape-divider-bottom-1711033628 .shape-fill {
     fill: #FFFFFF;
 }
