--- a/Styles.css
+++ b/Styles.css
@@ -253,6 +253,7 @@ html,body
 /* services section*/
 .Snappy{
     width: 100%;
+    height: 25vh;
     background: rgba(2, 48, 32, 0.9);
     display: flex;
     justify-content: center;
