--- a/Styles.css
+++ b/Styles.css
@@ -253,8 +253,7 @@ html,body
 /* services section*/
 .Snappy{
     width: 100%;
-    height: 25vh;
-    background: rgba(2, 48, 32, 0.9);
+    background: linear-gradient(to bottom, rgba(2, 48, 32, 0.9), rgba(34, 139, 34, 0.9));
     display: flex;
     justify-content: center;
     align-items: center;
