--- a/Styles.css
+++ b/Styles.css
@@ -253,13 +253,14 @@ html,body
 /* services section*/
 .Snappy{
     width: 100%;
-    background: linear-gradient(to bottom, rgba(2, 48, 32, 0.9), rgba(34, 139, 34, 0.9));
+    background: rgba(2, 48, 32, 0.9);
     display: flex;
     justify-content: center;
     align-items: center;
     scroll-snap-align: start;
     background-position: center;
     background-size: cover;
+    box-shadow:10px 10px 20px rgba(253, 218, 13, 0.4);
 }
 .snappy__content{
     margin-bottom: 2rem;
